fixed the scrolling issue whereby the view cart covers the menu item cards

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -427,6 +427,11 @@ body {
     color: #fff;
   }
 
+  .menu-middle{
+    padding-bottom: 6rem;
+  }
+
+
 }
 
 /* *********************** */
